# Presto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  LICENSE  README.md  findings.md  package-lock.json  package.json  package_installer.command  progress.md  requirements.txt  task_plan.md
.obsidian/: graph.json  workspace.json
backend/: requirements-dev.txt  requirements-runtime.txt
docs/: README.md  TECHNICAL_ARCHITECTURE.md  V0_2_0_GITHUB_ISSUES_CHECKLIST.md  V0_2_GITHUB_ISSUES_CHECKLIST.md  backend-architecture.md  communication-architecture.md  frontend-architecture.md  sdk-development.md  third-party-plugin-development.md  version-support.md
frontend/: package-lock.json  package.json  vite.config.ts
host-plugin-runtime/: browser.ts  package.json
packaging/: build_app.sh  install_deps.sh  vendor_local_deps.py  vendor_local_deps.sh
presto/: __init__.py  main.py  main_api.py
presto-product-landing/: README.md  index.html  landing-page.test.mjs  main.js  preview-command.test.mjs  styles.css
scripts/: build-tauri-frontend.mjs  build-tauri-sidecar.mjs  clean-local-artifacts.mjs  generate-contracts.mjs  generate-ptsl-catalog.mjs  inject-macos-app-icon.mjs  obsidian_commit_sync.sh  package-tauri-build.mjs  prepare-tauri-python.mjs  prepare-tauri-resources.mjs  prepare_icon.sh  preview-static.mjs  sync-version.mjs  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  runtime.rs
src-tauri/src/runtime/: app_config_defaults_generated.rs  backend.rs  daw_targets_generated.rs  mobile_progress.rs  plugins.rs
(+519 files in other folders)
