[package]
name = "presto-tauri"
version = "0.3.8"
edition = "2021"
license = "AGPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
